[gd_scene load_steps=12 format=4 uid="uid://bbnls3jkgplho"]

[ext_resource type="Script" uid="uid://bpo0fb21tji3i" path="res://scripts/montreal/montreal.gd" id="1_42t2h"]
[ext_resource type="PackedScene" uid="uid://g0la2gg2k0yu" path="res://objects/montreal/rock_canoeing.tscn" id="2_hcfki"]
[ext_resource type="PackedScene" uid="uid://de46inx8bf2xf" path="res://scenes/intros/victoria_intro.tscn" id="3_42t2h"]
[ext_resource type="PackedScene" uid="uid://dkwivdf5kunyc" path="res://scenes/pause_menu.tscn" id="4_kh4w5"]
[ext_resource type="FontFile" uid="uid://cf7ol80uefu05" path="res://assets/fonts/PixelOperator8.ttf" id="5_6el24"]
[ext_resource type="PackedScene" uid="uid://c5ry8m2lr5w5k" path="res://objects/players/canoeing.tscn" id="6_08blp"]
[ext_resource type="Texture2D" uid="uid://mv5hrnc51uxk" path="res://icon.svg" id="7_t4gvi"]
[ext_resource type="Texture2D" uid="uid://ceeyi1wi6khua" path="res://assets/water.png" id="8_x07io"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5plmf"]
size = Vector2(232, 393)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lo22k"]
texture = ExtResource("8_x07io")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_fkm7y"]
tile_size = Vector2i(48, 48)
sources/1 = SubResource("TileSetAtlasSource_lo22k")

[node name="Montreal" type="Node2D"]
script = ExtResource("1_42t2h")
rock_scene = ExtResource("2_hcfki")
next_level = ExtResource("3_42t2h")

[node name="PauseMenu" parent="." instance=ExtResource("4_kh4w5")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = 20
offset_left = -192.0
offset_top = -108.0
offset_right = -94.0
offset_bottom = -90.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Time Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_6el24")
theme_override_font_sizes/font_size = 8
text = "Time Left 0:00"

[node name="TotalTime" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_6el24")
theme_override_font_sizes/font_size = 8
text = "Time: 0:00"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Canoeing" parent="." instance=ExtResource("6_08blp")]
position = Vector2(100, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-359.5, -1.5)
scale = Vector2(1.80469, 3.05469)
texture = ExtResource("7_t4gvi")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-361, -1.5)
shape = SubResource("RectangleShape2D_5plmf")

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -20
tile_map_data = PackedByteArray("AAD7//3/AQAAAAAAAAD7//7/AQAAAAAAAAD7////AQAAAAAAAAD7/wAAAQAAAAAAAAD7/wEAAQAAAAAAAAD7/wIAAQAAAAAAAAD8//3/AQAAAAAAAAD8//7/AQAAAAAAAAD8////AQAAAAAAAAD8/wAAAQAAAAAAAAD8/wEAAQAAAAAAAAD8/wIAAQAAAAAAAAD9//3/AQAAAAAAAAD9//7/AQAAAAAAAAD9////AQAAAAAAAAD9/wAAAQAAAAAAAAD9/wEAAQAAAAAAAAD9/wIAAQAAAAAAAAD+//3/AQAAAAAAAAD+//7/AQAAAAAAAAD+////AQAAAAAAAAD+/wAAAQAAAAAAAAD+/wEAAQAAAAAAAAD+/wIAAQAAAAAAAAD///3/AQAAAAAAAAD///7/AQAAAAAAAAD/////AQAAAAAAAAD//wAAAQAAAAAAAAD//wEAAQAAAAAAAAD//wIAAQAAAAAAAAAAAP3/AQAAAAAAAAAAAP7/AQAAAAAAAAAAAP//AQAAAAAAAAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAABAP3/AQAAAAAAAAABAP7/AQAAAAAAAAABAP//AQAAAAAAAAABAAAAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAACAP3/AQAAAAAAAAACAP7/AQAAAAAAAAACAP//AQAAAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAADAP3/AQAAAAAAAAADAP7/AQAAAAAAAAADAP//AQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAAEAP3/AQAAAAAAAAAEAP7/AQAAAAAAAAAEAP//AQAAAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_fkm7y")

[node name="Rocks" type="Node" parent="."]

[node name="NewRocks" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="NewRocks" to="." method="_on_new_rocks_timeout"]
